# C-Dictionary

./: CMakeLists.txt  README.md  data.c  dic.c  dic.glade~
